# sony

./: .gitignore  DSC-T2_language_unlock_investigation.md  NEXT_POLICY.md  README.md  flake.nix  pmca-console.py  pmca-gui.py  pyproject.toml  requirements.txt  test.txt
logs/: 03.csv  USBログ.txt
pmca/: config_manager.py
pmca/apk/: __init__.py
pmca/commands/: usb.py
pmca/i18n/: __init__.py  en.json  zh-cn.json
pmca/marketclient/: __init__.py
pmca/platform/: backup.py  tweaks.py
pmca/shell/: parser.py
