[project]
name = "sony-pmca-re"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asn1crypto>=1.5.1",
    "axmlparserpy==0.0.4",
    "certifi>=2025.8.3",
    "comtypes>=1.4.12 ; sys_platform == 'win32'",
    "pycparser==2.17",
    "pycryptodomex>=3.23.0",
    "pyinstaller>=6.16.0",
    "pyusb>=1.3.1",
    "pywin32>=311 ; sys_platform == 'win32'",
    "pyyaml>=6.0.2",
    "tlslite-ng>=0.8.2",
]
